Subword encoder and biaffine decoder

--- a/sling/nlp/document/BUILD
+++ b/sling/nlp/document/BUILD
@@ -37,6 +37,30 @@ cc_library(
 )
 
 cc_library(
+  name = "wordpiece-builder",
+  srcs = ["wordpiece-builder.cc"],
+  hdrs = ["wordpiece-builder.h"],
+  deps = [
+    "//sling/base",
+    "//sling/string:text",
+    "//sling/util:unicode",
+    "//sling/util:vocabulary",
+  ],
+)
+
+cc_library(
+  name = "fingerprinter",
+  srcs = ["fingerprinter.cc"],
+  hdrs = ["fingerprinter.h"],
+  deps = [
+    "//sling/base",
+    "//sling/string:text",
+    "//sling/util:fingerprint",
+    "//sling/util:unicode",
+  ],
+)
+
+cc_library(
   name = "text-tokenizer",
   srcs = ["text-tokenizer.cc"],
   hdrs = ["text-tokenizer.h"],
@@ -51,14 +75,13 @@ cc_library(
 )
 
 cc_library(
-  name = "fingerprinter",
-  srcs = ["fingerprinter.cc"],
-  hdrs = ["fingerprinter.h"],
+  name = "subword-tokenizer",
+  srcs = ["subword-tokenizer.cc"],
+  hdrs = ["subword-tokenizer.h"],
   deps = [
     "//sling/base",
-    "//sling/string:text",
-    "//sling/util:fingerprint",
     "//sling/util:unicode",
+    "//sling/util:vocabulary",
   ],
 )
 
@@ -178,12 +201,14 @@ cc_library(
   name = "vocabulary-builder",
   srcs = ["vocabulary-builder.cc"],
   deps = [
+    ":wordpiece-builder",
     "//sling/base",
     "//sling/file:textmap",
     "//sling/nlp/document",
     "//sling/task:accumulator",
     "//sling/task:documents",
     "//sling/util:unicode",
+    "//sling/util:vocabulary",
   ],
   alwayslink = 1,
 )
