Database key utility

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -50,3 +50,14 @@ cc_binary(
   ],
 )
 
+cc_binary(
+  name = "dbkeys",
+  srcs = ["dbkeys.cc"],
+  deps = [
+    "//sling/base",
+    "//sling/file:posix",
+    "//sling/file:textmap",
+    "//sling/db:dbclient",
+  ],
+)
+
