Replace old HTTP server with new socket server

--- a/sling/db/BUILD
+++ b/sling/db/BUILD
@@ -42,7 +42,7 @@ cc_binary(
     ":dbprotocol",
     "//sling/base",
     "//sling/file:posix",
-    "//sling/net:http-protocol",
+    "//sling/net:http-server",
     "//sling/string:numbers",
     "//sling/util:fingerprint",
     "//sling/util:mutex",
