--- a/sling/nlp/document/BUILD
+++ b/sling/nlp/document/BUILD
@@ -223,7 +223,7 @@ cc_library(
     ":lex",
     "//sling/base",
     "//sling/frame",
-    "//sling/http:web-service",
+    "//sling/net:web-service",
   ],
 )
 
@@ -252,9 +252,9 @@ cc_binary(
     "//sling/file:posix",
     "//sling/file:recordio",
     "//sling/frame",
-    "//sling/http:http-server",
-    "//sling/http:static-content",
-    "//sling/http:web-service",
+    "//sling/net:http-server",
+    "//sling/net:static-content",
+    "//sling/net:web-service",
     "//sling/nlp/kb:knowledge-service",
     "//sling/util:mutex",
   ],
@@ -292,9 +292,9 @@ cc_binary(
     "//sling/file:embed",
     "//sling/file:posix",
     "//sling/frame",
-    "//sling/http:http-server",
-    "//sling/http:static-content",
-    "//sling/http:web-service",
+    "//sling/net:http-server",
+    "//sling/net:static-content",
+    "//sling/net:web-service",
     "//sling/nlp/kb:knowledge-service",
   ],
 )
