--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -189,9 +189,9 @@ cc_library(
     "//sling/frame:object",
     "//sling/frame:serialization",
     "//sling/frame:store",
-    "//sling/http:http-server",
-    "//sling/http:static-content",
-    "//sling/http:web-service",
+    "//sling/net:http-server",
+    "//sling/net:static-content",
+    "//sling/net:web-service",
     "//sling/util:sortmap",
   ],
 )
@@ -205,8 +205,8 @@ cc_binary(
     "//sling/file",
     "//sling/file:embed",
     "//sling/file:posix",
-    "//sling/http:http-server",
-    "//sling/http:web-service",
+    "//sling/net:http-server",
+    "//sling/net:web-service",
     "//sling/string:text",
     "//sling/string:strcat",
   ],
