SIMD kernels for inner and outer products

--- a/sling/myelin/kernel/BUILD
+++ b/sling/myelin/kernel/BUILD
@@ -1,89 +1,32 @@
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-  name = "generic",
+  name = "library",
   srcs = [
     "argmax.cc",
+    "arithmetic.cc",
     "array.cc",
     "concat.cc",
     "gather.cc",
     "generic.cc",
+    "gradients.cc",
+    "library.cc",
+    "precompute.cc",
     "reduce.cc",
+    "simd-matmul.cc",
     "transpose.cc",
   ],
-  hdrs = ["generic.h"],
+  hdrs = ["library.h"],
   deps = [
     "//sling/base",
     "//sling/myelin:compute",
     "//sling/myelin:builder",
+    "//sling/myelin:flow",
+    "//sling/myelin:gradient",
     "//sling/myelin:simd-assembler",
-  ],
-)
-
-cc_library(
-  name = "arithmetic",
-  srcs = [
-    "arithmetic.cc",
-  ],
-  hdrs = ["arithmetic.h"],
-  deps = [
-    "//sling/base",
-    "//sling/myelin:compute",
     "//sling/myelin:express",
     "//sling/myelin/generator:elementwise",
     "//sling/myelin/generator:expression",
-  ],
-)
-
-cc_library(
-  name = "avx",
-  srcs = [
-    "avx.cc",
-    "avx-matmul.cc",
-    "simd-matmul.cc",
-  ],
-  hdrs = [
-    "avx.h",
-  ],
-  deps = [
-    "//sling/base",
-    "//sling/myelin:compute",
-    "//sling/myelin:simd-assembler",
-  ],
-)
-
-cc_library(
-  name = "precompute",
-  srcs = ["precompute.cc"],
-  hdrs = ["precompute.h"],
-  deps = [
-    ":arithmetic",
-    ":generic",
-    "//sling/myelin:compute",
-  ],
-)
-
-cc_library(
-  name = "gradients",
-  srcs = ["gradients.cc"],
-  hdrs = ["gradients.h"],
-  deps = [
-    "//sling/myelin:flow",
-    "//sling/myelin:gradient",
-  ],
-)
-
-cc_library(
-  name = "library",
-  srcs = ["library.cc"],
-  hdrs = ["library.h"],
-  deps = [
-    ":arithmetic",
-    ":avx",
-    ":generic",
-    ":gradients",
-    ":precompute",
-    "//sling/myelin:compute",
   ],
 )
 
@@ -98,7 +41,8 @@ cc_library(
   ],
   hdrs = ["cuda.h"],
   deps = [
-    ":arithmetic",
+    ":library",
+    "//sling/base",
     "//sling/myelin:compute",
     "//sling/myelin:express",
     "//sling/myelin/cuda:cuda-kernel",
