--- a/app/BUILD
+++ b/app/BUILD
@@ -11,7 +11,9 @@ embed_data(
     "external/material-icons.woff2",
     "external/preact.js",
     "image/appicon.ico",
+    "lib/component.js",
     "lib/docview.js",
+    "lib/material.js",
     "lib/mdl.js",
     "lib/util.js",
     "style/docview.css",
