--- a/app/BUILD
+++ b/app/BUILD
@@ -10,7 +10,8 @@ embed_data(
     "external/material-icons.css",
     "external/material-icons.woff2",
     "external/preact.js",
-    "image/appicon.ico",
+    "image/rr-logo.ico",
+    "image/rr-logo.svg",
     "lib/component.js",
     "lib/docview.js",
     "lib/material.js",
