Port document viewer to web components

--- a/app/BUILD
+++ b/app/BUILD
@@ -10,13 +10,12 @@ embed_data(
     "external/material-icons.css",
     "external/material-icons.woff2",
     "external/preact.js",
-    "image/rr-logo.ico",
+    "image/appicon.ico",
     "image/rr-logo.svg",
     "lib/component.js",
     "lib/docview.js",
     "lib/material.js",
     "lib/mdl.js",
     "lib/util.js",
-    "style/docview.css",
   ],
 )
