--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -82,10 +82,12 @@ cc_library(
   srcs = ["name-table-builder.cc"],
   deps = [
     "//sling/base",
+    "//sling/file:buffered",
     "//sling/file:repository",
     "//sling/frame:object",
     "//sling/task",
     "//sling/task:frames",
+    "//sling/util:arena",
     "//sling/util:mutex",
     "//sling/util:unicode",
   ],
@@ -110,13 +112,16 @@ cc_library(
   deps = [
     ":facts",
     "//sling/base",
+    "//sling/file:buffered",
     "//sling/file:repository",
     "//sling/frame:object",
     "//sling/frame:serialization",
-    "//sling/nlp/document:phrase-tokenizer",
     "//sling/nlp/wiki",
+    "//sling/string:numbers",
+    "//sling/string:text",
     "//sling/task",
     "//sling/task:frames",
+    "//sling/util:arena",
     "//sling/util:mutex",
   ],
   alwayslink = 1,
