Inverse properties in reconciler

--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -42,6 +42,7 @@ cc_library(
   srcs = ["reconciler.cc"],
   deps = [
     "//sling/base",
+    "//sling/frame",
     "//sling/task:frames",
     "//sling/task:reducer",
   ],
