Qualified strings for reader/printer and Python API

--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -14,6 +14,7 @@ cc_library(
     "pyphrase.cc",
     "pyrecordio.cc",
     "pystore.cc",
+    "pystring.cc",
     "pytask.cc",
     "pyweb.cc",
     "pywiki.cc",
@@ -29,6 +30,7 @@ cc_library(
     "pyphrase.h",
     "pyrecordio.h",
     "pystore.h",
+    "pystring.h",
     "pytask.h",
     "pyweb.h",
     "pywiki.h",
