Detect invalid strings in JSON printer

--- a/sling/frame/BUILD
+++ b/sling/frame/BUILD
@@ -131,6 +131,7 @@ cc_library(
     "//sling/base",
     "//sling/stream:output",
     "//sling/string:numbers",
+    "//sling/util:unicode",
   ],
 )
 
