--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -199,6 +199,9 @@ cc_library(
     "//sling/net:http-server",
     "//sling/net:static-content",
     "//sling/net:web-service",
+    "//sling/nlp/document",
+    "//sling/nlp/document:document-tokenizer",
+    "//sling/nlp/document:lex",
     "//sling/util:md5",
     "//sling/util:sortmap",
   ],
