Fix race condition in item merger

--- a/sling/nlp/kb/BUILD
+++ b/sling/nlp/kb/BUILD
@@ -46,6 +46,7 @@ cc_library(
     "//sling/frame",
     "//sling/task:frames",
     "//sling/task:reducer",
+    "//sling/util:mutex",
   ],
   alwayslink = 1,
 )
