Python web server micro-framework based on the SLING HTTP server

--- a/sling/pyapi/BUILD
+++ b/sling/pyapi/BUILD
@@ -11,6 +11,7 @@ cc_library(
     "pyframe.cc",
     "pymisc.cc",
     "pymyelin.cc",
+    "pynet.cc",
     "pyparser.cc",
     "pyphrase.cc",
     "pyrecordio.cc",
@@ -28,6 +29,7 @@ cc_library(
     "pyframe.h",
     "pymisc.h",
     "pymyelin.h",
+    "pynet.h",
     "pyparser.h",
     "pyphrase.h",
     "pyrecordio.h",
@@ -46,12 +48,13 @@ cc_library(
     "//sling/frame:json",
     "//sling/frame:turtle",
     "//sling/frame:xml",
-    "//sling/net:http-server",
     "//sling/myelin:flow",
     "//sling/myelin:compiler",
     "//sling/myelin:compute",
     "//sling/myelin:gradient",
     "//sling/myelin:profile",
+    "//sling/net:http-server",
+    "//sling/net:static-content",
     "//sling/nlp/document",
     "//sling/nlp/document:annotator",
     "//sling/nlp/document:document-tokenizer",
