Skip non-entity items in search index

--- a/sling/nlp/search/BUILD
+++ b/sling/nlp/search/BUILD
@@ -8,6 +8,7 @@ cc_library(
     "//sling/file:repository",
     "//sling/frame:serialization",
     "//sling/nlp/document:phrase-tokenizer",
+    "//sling/nlp/wiki:wiki",
     "//sling/task",
     "//sling/task:frames",
     "//sling/string:text",
@@ -39,6 +40,7 @@ cc_library(
     "//sling/file:repository",
     "//sling/frame:serialization",
     "//sling/nlp/document:phrase-tokenizer",
+    "//sling/nlp/wiki:wiki",
     "//sling/task",
     "//sling/task:frames",
     "//sling/string:text",
